# meuportefolio

./: .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile  README.md  docker-compose.yml  to-do.txt
backend/src/: api_docs.md  main.rs
backend/src/db/: db.rs  mod.rs
backend/src/handlers/: assets.rs  health.rs  mod.rs  portfolio.rs  risk.rs  users.rs
backend/src/models/: assets.rs  funds.rs  mod.rs  portfolio.rs  risk.rs  trading.rs  user.rs
backend/src/utils/: mod.rs
database/: README.md
database/csv/: META_0103-0527.csv  NVDIA_0103-0527.csv  SOL_0103-0527.csv
database/migrations/: 001_tables.sql  003_views.sql  004_triggers.sql  005_1_user_procedures.sql  005_2_portfolio_procedures.sql  005_3_trading_procedures.sql  005_4_asset_procedures.sql  005_5_index_procedures.sql  005_5_risk_procedures.sql  006_1_risk_functions.sql  006_functions.sql  007_risk_automation.sql  008_portfolio_creation_trigger.sql  009_enhanced_logging_system.sql
database/scripts/: asset_reports.sql  delete_data.sql  health_check.sql  quick_risk_fix.sql  setup_risk_metrics.sql  verify_changepercent_data.sql  verify_changepercent_migration.sql
database/seed/: 001_assets_basic.sql  002_asset_details.sql  003_users_comprehensive.sql  004_portfolios_and_holdings.sql  004_portfolios_holdings_fixed.sql  (+2 more)
db/: to-do.txt
docs/: documentacao_base_dados.md
frontend/: .dockerignore  DB_REF_FILE.sql  Dockerfile  FRONTEND_INSTRUCT.md  README.md  TASKS.md  eslint.config.mjs  next.config.ts  package.json  to-do.txt
report/: meuportefolio.md
scripts/: README.md  SETUP_INSTRUCTIONS.md  import_historical_data.py  import_market_data.py  requirements.txt
tests/: analyze-api-table-usage.ps1  analyze-database-structure.ps1  quick-test.ps1  simple-table-usage-analysis.ps1  test-api.ps1  test-create-portfolio.ps1  test-create-user.ps1  test-fund-trading-workflow.ps1  test-login.ps1  test-portfolio-operations.ps1  test-portfolio-workflow.ps1  test-simple.ps1  test-simplified-api.ps1  test-update-portfolio.ps1  test-update-user.ps1
(+161 files in other folders)
